--- a/source/style/common/_layout.scss
+++ b/source/style/common/_layout.scss
@@ -4,69 +4,45 @@
 
 html,
 body {
-    overflow-x: hidden;
-    height: 100%;
-    width: 100%;
-    margin: 0;
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 .wrapper {
-    position: relative;
-}
-
-html {
-
-  @include desktop {
-    font-size:15px;
-  }
-
-  @include laptop {
-    font-size:14px;
-  }
-
-  @include tablet {
-    font-size:13px;
-  }
-
+  position: relative;
 }
 
 .container {
-    width: 1580px;
-    margin: 0 auto;
+  width: 960px;
+  margin: 0 auto;
 
-    @include hd {
-      width:1180px;
-    }
 
-    @include desktop {
-      width:960px;
-    }
-
-    @include laptop {
-      width:712px;
-    }
-
-    @include phone {
-      width:80%;
-    }
-
+  &--header {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
 }
 
+// Для float - блоков
 .clearfix::before,
 .clearfix::after {
-    content: "";
-    width: 100%;
-    clear: both;
-    display: block;
+  content: "";
+  width: 100%;
+  clear: both;
+  display: block;
 }
 
 // Прибиваем футер
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .footer {
-    margin-top: auto;
+  margin-top: auto;
 }
