--- a/source/template/_blocks/_header.pug
+++ b/source/template/_blocks/_header.pug
@@ -1,2 +1,4 @@
-
-h1 Hello world! It's header!
+header.header
+    div.container.container--header
+        div.header__logo Яндекс
+        div.header__text Расписание занятий
