--- a/source/style/elements/schedule.scss
+++ b/source/style/elements/schedule.scss
@@ -184,6 +184,8 @@
     text-decoration: none;
     padding:4px 12px;
     cursor:pointer;
+    font-family: FiraSans-Regular;
+    font-size:16px;
 
     &:hover {
       border:2px solid $red;
