--- a/source/hbs-templates/lecture-last.hbs
+++ b/source/hbs-templates/lecture-last.hbs
@@ -1,15 +1,19 @@
 <div class="schedule__row">
-    <div class="schedule__col schedule__col--wide">
+    <div class="schedule__col schedule__col--wide" data-label="Название">
         <a href="{{video}}" class="schedule__link">{{title}}</a>
     </div>
-    <div class="schedule__col schedule__col--medium">{{school}}</div>
-    <div class="schedule__col">
-        {{#each teacher as |teach|}}
-              <span>{{teach}}</span>
+    <div class="schedule__col schedule__col--medium" data-label="Школа">
+        {{#each school as |school-name|}}
+              <span>{{school-name}}</span>
         {{/each}}
     </div>
-    <div class="schedule__col">{{classroom}}</div>
-    <div class="schedule__col">
+    <div class="schedule__col" data-label="Учитель">
+        {{#each teacher as |teach|}}
+              <span class="schedule__teacher">{{teach}}</span>
+        {{/each}}
+    </div>
+    <div class="schedule__col" data-label="Аудитория">{{classroom}}</div>
+    <div class="schedule__col" data-label="Запись">
         <a href="{{video}}" class="schedule__button">Смотреть</a>
     </div>
 </div>
