--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -14,10 +14,9 @@ html(lang=ru-Ru)
     //- favicon block start
     //- favicon block end
 
-    link(rel='stylesheet' href='/assets/css/foundation.css')
-    link(rel='stylesheet' href='/assets/css/app.css')
-    script(src='/assets/js/foundation.js' defer)
-    script(src='/assets/js/app.js' defer)
+    link(rel='stylesheet' href='./assets/css/foundation.css')
+    link(rel='stylesheet' href='./assets/css/app.css')
+    
 
     <!--[if lt IE 9]>
     script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
@@ -27,3 +26,5 @@ html(lang=ru-Ru)
     .wrapper
         block content
 
+    script(src='./assets/js/foundation.js' defer)
+    script(src='./assets/js/app.js' defer)
